--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/CS7980
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
             
