--- a/pom.xml
+++ b/pom.xml
@@ -63,10 +63,22 @@
       <artifactId>jakarta.persistence-api</artifactId>
       <version>2.2.3</version>
     </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.boot</groupId>-->
+      <!--<artifactId>spring-boot-starter-data-redis</artifactId>-->
+      <!--<version>2.7.2</version>-->
+    <!--</dependency>-->
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-redis</artifactId>
-      <version>2.7.2</version>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>2.3.3.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>3.3.0</version>
+      <type>jar</type>
     </dependency>
   </dependencies>
 
