--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,11 @@
       <artifactId>jakarta.persistence-api</artifactId>
       <version>2.2.3</version>
     </dependency>
-    <!--<dependency>-->
-      <!--<groupId>org.springframework.boot</groupId>-->
-      <!--<artifactId>spring-boot-starter-data-redis</artifactId>-->
-      <!--<version>2.7.2</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+      <version>2.7.2</version>
+    </dependency>
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-redis</artifactId>
@@ -87,6 +87,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.4.1</version>
       </plugin>
     </plugins>
   </build>
