--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,10 @@ spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=12345678
 spring.datasource.url=jdbc:mysql://localhost:3306/CS7980
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+
             
