--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
       <version>3.3.0</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
