Add Kafka switch, and extract constant controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,13 @@ spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
 
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/CS7980
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 spring.kafka.bootstrap-servers=PLAINTEXT://localhost:9092
+# Enable or disable Kafka Listener
+kafka.start=false
 
