Add Kafka switch, and extract constant controller

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
       <version>${jackson-bom.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.0.19</version>
+    </dependency>
+
   </dependencies>
 
   <build>
